# my_game

./: Makefile.am  Makefile.in  README.html  README.md  asteroids3D.spec  configure  configure.ac
src/: ast_snd0.ub  ast_snd1.ub  ast_snd2.ub  ast_snd3.ub  ast_snd4.ub  ast_snd5.ub  ast_tex0.ppm  ast_tex1.ppm  ast_tex2.ppm  ast_tex3.ppm  ast_tex4.ppm  ast_tex5.ppm  asteroid.c  asteroids3D.h  calc_frame.c  coll_snd.ub  collision.c  debug.c  defs.h  display.c  dust.c  explosion.c  hud.c  keyb.c  light.c  main.c  move.c  nebula_tex0.ppm  nebula_tex1.ppm  nebula_tex2.ppm  nebula_tex3.ppm  oglutils.c  pause.c  proto.h  rcfile.c  score.c  shield.c  sound.c  split.c  structs.h  (+12 more)
